# modular-dsp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
.cargo/: config
host/: Cargo.toml
host/src/: input.rs  main.rs  threads.rs  transport.rs
host/src/core/: audio.rs  midi.rs
host/src/modules/: wavetable.rs
host/src/processors/: mod.rs  portaudio.rs  portmidi.rs
native/: Cargo.toml  index.node.d.ts
native/src/: lib.rs  main.rs  portaudio.rs  portaudiobindings.rs  portmidi.rs  portmidibindings.rs
native/src/modules/: mod.rs
src/: audio.rs  lib.rs  main.rs  main.ts  renderer.tsx
src/audio/: audiomodule.rs  audioprocessor.rs  mod.rs
src/main/: index.ts  main.ts
src/midi/: midiprocessor.rs  mod.rs
src/modules/: wavetable.rs
src/native/: portaudio.rs  portmidi.rs
src/portaudioprocessor/: mod.rs  portaudioprocessor.rs
src/portmidiprocessor/: mod.rs  portmidiprocessor.rs
src/renderer/: index.tsx
src/sine/: mod.rs  sinemodule.rs
src/sinemodule/: sinemodule.rs
src/wavetablemodule/: mod.rs  wavetablemodule.rs
web/: Cargo.toml
